tm/tests/snapshots/tui_queue_screens__queue_fits_footer_m2.snap
---
source: tm/tests/tui_queue_screens.rs
expression: "queue::fits_footer(&view, &tasks)"
---
fits this week: 2b of 2b
