tm/tests/snapshots/tui_queue_screens__queue_task_rows_m2.snap
---
source: tm/tests/tui_queue_screens.rs
expression: "task_table.join(\"\\n\")"
---
t4  p3 ci3 1b   Claude Code drafts tests       
t5  p3 ci3 1b   Review the drafts              ⛔ after t4
